--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
         <link rel="stylesheet" href="./main.css" type="text/css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-        <main role="main"></main>
+        <main role="main">
+            <div id="head"></div>
+            <div id="game"></div>
+            <div id="foot">
+                <div id="userInput">
+                    <input type="text" name="answer" id="answer" value="Answer here..." />
+                </div>
+            </div>
+        </main>
+        <script src="./classes/cellClass.js"></script>
+        <script src="./classes/boardClass.js"></script>
         <script src="./main.js"></script>
     </body>
 </html>
